--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,30 +4,28 @@
       layout:decorate="~{fragments/layout}">
 <head>
     <title>Login</title>
+    <style>
+        .form-control2{
+        margin-left:3px;
+        }
+    </style>
+
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
 
+
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <h1>Login page</h1>
-            <form th:action="@{/login}" method="post">
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">
-                        Invalid username or password.
-                    </div>
-                </div>
-                <div th:if="${param.logout}">
-                    <div class="alert alert-info">
-                        You have been logged out.
-                    </div>
-                </div>
+            <h1>Log In page</h1>
+            <form th:action="@{/login-attempt}" method="post" modelAtribute="student">
+
                 <div class="form-group">
                     <label for="username">Username</label>:
                     <input type="text"
                            id="username"
                            name="username"
-                           class="form-control"
+                           class="form-control1"
                            autofocus="autofocus"
                            placeholder="Username">
                 </div>
@@ -36,28 +34,26 @@
                     <input type="password"
                            id="password"
                            name="password"
-                           class="form-control"
+                           class="form-control2"
                            placeholder="Password">
                 </div>
+
+
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit"
-                                   name="login-submit"
-                                   id="login-submit"
-                                   class="form-control btn btn-info"
-                                   value="Log In">
+                            <button type="submit"
+                                    name="login-submit"
+                                    id="login-submit"
+                                    class="form-control btn btn-info"
+                                    value="Register"
+                                    onclick="/login-attempt">
+                                Log In </button>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <p>
-                                Don't have account? <a href="/register" style="strong">SIGN UP NOW!</a>
 
-                            </p>
-                        </div>
-                    </div>
                 </div>
+
             </form>
         </div>
     </div>
